Some slight improvements of nav-bar on small screen devices and added ref to main page to logo in nav-bar.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="main-navbar">
             <div class="logo">
-                <img src="assets/SWTCWLogo.png" alt="Star Wars: The Clone Wars Logo" class="nav-logo" style="width: 100px; height: 75px;"></img>
+                <a href="index.html"><img src="assets/SWTCWLogo.png" alt="Star Wars: The Clone Wars Logo" class="nav-logo" style="width: 100px; height: 75px;"></img></a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -19,11 +19,11 @@
         </nav>
         <header class="header-section">
             <div class="header-content">
-                <img src="assets/SWTCWLogo.png" alt="Star Wars: The Clone Wars Logo" class="header-img"></img>
-                <a href="characters.html" class="btn-primary">Meet the Heroes</a>
+                <img src="assets/SWTCWLogo.png" alt="Star Wars: The Clone Wars Logo" class="header-img"></img>              
                 <h1 id="Upper-MTitle">Galaxy engulfed in conflict called: </h1>
                 <h1 id="Lower-MTitle">The Clone Wars!</h1>
-                <p></p>
+                <a href="#about-war" class="btn-primary">Plot and the Main Events</a>
+                <a href="characters.html" class="btn-primary">Meet the Heroes</a>
             </div>
         </header>
         <section id="about-war" class="content-section">
